--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Twitter</a>
           
           
                       <li class="list-inline-item">
-              <a href="https://www.freecodecamp.org/hegaajarad" target="_blank">FreeCodeCamp</a>
+              <a href="https://www.freecodecamp.org/ramzejarad" target="_blank">FreeCodeCamp</a>
             </li>
 			
 			
